# solid-eureka

./: README.md  cabal.project
a/: a.cabal
b/: b.cabal
