cabal-version:   3.0
name:            a
version:         0.1.0.0
license:         NONE
author:          Matthew Pickering
maintainer:      matthewtpickering@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable a
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
